Ajustes de front-end

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -1,7 +1,7 @@
 global:
   tagline: English
-  github: Access our GitHub
-  contact: Be in touch
+  github: GitHub
+  contact: Contact
   languages: Languages
   support: Help
   toggle: Toggle
