--- a/_i18n/pt.yml
+++ b/_i18n/pt.yml
@@ -1,7 +1,7 @@
 global:
   tagline: Português
-  github: Acesse nosso GitHub
-  contact: Entre em contato
+  github:  GitHub
+  contact: Contato
   languages: Idiomas
   support: Ajuda
   toggle: Esconder
