Adicionando comportamento no botão de comutar

--- a/_i18n/pt.yml
+++ b/_i18n/pt.yml
@@ -4,7 +4,7 @@ global:
   contact: Contato
   languages: Idiomas
   support: Ajuda
-  toggle: Esconder
+  toggle: Comutar
   sidebar: a coluna da esquerda
   darkbox: a coluna da direita
   complementary: Materiais complementares
