Adição de ícones para comutação do código e coluna lateral

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -4,7 +4,9 @@ global:
   contact: Contact
   languages: Languages
   support: Help
-  toggle: Toggle
+  toggle_code: Toggle
+  toggle_right: Toggle
+  toggle_left: Toggle
   sidebar: left column
   darkbox: right column
   complementary: Complementary materials
