--- a/_i18n/pt.yml
+++ b/_i18n/pt.yml
@@ -4,7 +4,9 @@ global:
   contact: Contato
   languages: Idiomas
   support: Ajuda
-  toggle: Comutar
+  toggle_code: Comutar
+  toggle_right: Comutar
+  toggle_left: Comutar
   sidebar: a coluna da esquerda
   darkbox: a coluna da direita
   complementary: Materiais complementares
