--- a/script/build
+++ b/script/build
@@ -1,4 +1,13 @@
 #!/bin/bash
+# enable error reporting to the console
+set -e
+
+lang=$LANG
+language=$LANGUAGE
+lc_all=$LC_ALL
+
+# make the system case sensitive for find
+export LANG=C && export LANGUAGE=C && LC_ALL=C
 
 # skip if build is triggered by pull request
 if [ "$TRAVIS_PULL_REQUEST" == "true" ]; then
@@ -11,9 +20,6 @@ for file in $(find _i18n/ -iname "*.md" -not -regex "_i18n/\w+/_posts/[a-z0-9\.\
   echo "Filenames must match [a-z0-9\.\-] expression. Filename '$file' is invalid"
   exit 1
 done
-
-# enable error reporting to the console
-set -e
 
 # lint for markdown
 bundle exec mdl --rules ${RULES} _i18n/
@@ -37,3 +43,6 @@ if [ -n "$GH_TOKEN" ]; then
   git commit -a -m "[$TRAVIS_COMMIT]: $TRAVIS_COMMIT_MESSAGE"
   git push --force origin master
 fi
+
+# restore system defaults
+export LANG=$lang && export LANGUAGE=$language && LC_ALL=$lc_all
