--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -14,6 +14,8 @@ global:
   home: Home
   need_help_title: Need Help?
   need_help_description: If you didn't find your answer, <a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/content/ajuda-portal">send us a message</a>
+  hub_title: Cielo Developers
+  hub_description: Hub description
 langs:
   en: English
   pt: Português
