--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -15,7 +15,7 @@ global:
   need_help_title: Need Help?
   need_help_description: If you didn't find your answer, <a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/content/suporte">send us a message</a>
   hub_title: Cielo Developers
-  hub_description: Documents, articles and tutorials of all Braspag products are available on this page
+  hub_description: Documents, articles and tutorials of all Cielo products are available on this page
 langs:
   en: English
   pt: Português
